Resolved button spacing on mobile, added edit/delete buttons on products in Seller's profile

--- a/public/main.css
+++ b/public/main.css
@@ -865,6 +865,11 @@ select {
   margin-bottom: 2rem;
 }
 
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
 .mt-14 {
   margin-top: 3.5rem;
 }
@@ -991,8 +996,8 @@ select {
   max-height: 100vh;
 }
 
-.max-h-40 {
-  max-height: 10rem;
+.max-h-36 {
+  max-height: 9rem;
 }
 
 .w-80 {
@@ -1287,6 +1292,16 @@ select {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 253 245 / var(--tw-bg-opacity));
+}
+
+.bg-amber-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 251 235 / var(--tw-bg-opacity));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1295,6 +1310,11 @@ select {
 .object-center {
   -o-object-position: center;
      object-position: center;
+}
+
+.object-top {
+  -o-object-position: top;
+     object-position: top;
 }
 
 .p-2 {
@@ -1644,6 +1664,10 @@ select {
   transition-timing-function: linear;
 }
 
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
 .btn {
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
@@ -1893,6 +1917,16 @@ select {
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-amber-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
+}
+
+.hover\:text-slate-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
 .hover\:outline-gray-400:hover {
   outline-color: #9ca3af;
 }
@@ -1937,8 +1971,16 @@ select {
     display: block;
   }
 
+  .sm\:aspect-square {
+    aspect-ratio: 1 / 1;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
   }
 
   .sm\:place-items-start {
@@ -1949,9 +1991,19 @@ select {
     align-items: flex-start;
   }
 
+  .sm\:object-center {
+    -o-object-position: center;
+       object-position: center;
+  }
+
   .sm\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .sm\:text-start {
@@ -2075,6 +2127,10 @@ select {
     align-items: flex-end;
   }
 
+  .md\:justify-end {
+    justify-content: flex-end;
+  }
+
   .md\:gap-8 {
     gap: 2rem;
   }
@@ -2124,6 +2180,11 @@ select {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .md\:pr-28 {
@@ -2207,6 +2268,16 @@ select {
     padding-left: 16rem;
     padding-right: 16rem;
   }
+
+  .\32xl\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .\32xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
 }
 
 .\[\&\>\*\]\:inline-block>* {
@@ -2237,11 +2308,6 @@ select {
 .\[\&\>\*\]\:text-2xl>* {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.\[\&\>\*\]\:text-xl>* {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .\[\&\>\*\]\:drop-shadow-sm>* {
